# EJ200BMD

./: CMakeLists.txt  EJ200Scibar.bms  EJ200Scibar.stl  EJ200Scibar_60_WLS.stl  EJ200Scibar_60_WLS2mm.stl  EJ200Scibar_60_WLS2mm_Ascii.stl  EJ200Scibar_60_WLS_Ascii.stl  EJ200Scibar_bin.stl  EJ200_Emission  Files  HammaPhotn deteEfficiency  Oct5_Meeting.pptx  PrimaryGeneratorAction1.cc  SCIBAR.gdml  SiPM_bin.stl  WLS_Absorption  WLS_Emission  WLS_bin.stl  new.txt  scintillator-sipm.cc  typescript
EJ200MuonShowring/: CMakeLists.txt  EJ200Scibar_singlesipm_Ascii.stl  README.md  cmd.file  cmdgps.mac  main.cc
EJ200MuonShowring (SD+ROOTManager)/: CMakeLists.txt  WLS_Ascii.stl  cmd.file  main.cc
EJ200MuonShowring(SD=WLS+SiPM)/: CMakeLists.txt
EJ200MuonShowring/include/: DetectorConstruction.hh  EventAction.hh  Hits.hh  PhysicsList.hh  ROOTManager.hh  RunAction.hh  SD.hh  steppinAction.hh
EJ200MuonShowring/src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  Hits.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorAction_CRY.cc  RunAction.cc  SD.cc  StackingAction.cc  steppingAction.cc
EJ200MuonShowringINPyramid_SD=Sci/: EJ200Scibar_singlewire_Ascii.stl  main.cc
EJ200MuonShowring_SD=Pyramid/: CMakeLists.txt
EJ200MuonShowring_SD=SiPM/: DetectorConstruction_pya.cc  Pyramid_of_Khafre.stl  main.cc
EJ200MuonShowring_SD=WLS/: EJ200Scibar_Ascii.stl
MuravesSim_khafre/: CMakeLists.txt  MuravesSim.cc  Pyramid_of_Khafre_bin.stl  README.md  Wires_Ascii_FibrousGlass.stl  cmd.file  cmdgps.mac
buildO/: CMakeCache.txt  EJ200Scibar1.stl  Makefile  (+3 more)
(+85 files in other folders)
